--- a/example/layout.jade
+++ b/example/layout.jade
@@ -14,6 +14,8 @@ head
 body
   //- Add your site or application content here
   block main
+    div
+      | main content
   block bottom-script
     script(src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js")
     script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js")
