--- a/example/index.jade
+++ b/example/index.jade
@@ -4,5 +4,5 @@ block append main
     a(href="#").media-left
       img(data-src="holder.js/64x64", alt="")
     .media-body
-      h4.media-heading Media heading
+      h4.media-heading Media heading #{header}
       p Text goes here...
