--- a/example/layout.jade
+++ b/example/layout.jade
@@ -5,7 +5,7 @@ head
   //- TODO: Check if it's the good charset
   meta(charset='utf-8')
   meta(http-equiv='X-UA-Compatible', content='IE=edge')
-  title 
+  title #{title}
   meta(name='description', content='')
   meta(name='viewport', content='width=device-width,initial-scale=1')
   //- TODO : Place favicon.ico and apple-touch-icon.png in the root directory
